# whisper.cpp

./: CMakeLists.txt  README.md  whisper-toggle.sh
data/: rag.db
examples/: CMakeLists.txt
examples/dictation-hud/: CMakeLists.txt  dictation-hud.cpp
scripts/: setup-whisper-dictation.sh
